--- a/famosos.html
+++ b/famosos.html
@@ -1,1 +1,96 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
+</head>
+<link rel="stylesheet" href="famosos.css">
+<body>
+
+    <div class="head">
+        <ul>
+            <li><a class="active" href="index.html"> Deportes </a></li>
+            <li><a href="#beneficios.html"> Beneficios del deporte </a></li>
+            <li><a href="#oyp.html"> Olimpiadas y Paralimpiadas </a></li>
+            <li><a href="#raros.html"> Deportes raros </a></li>
+            <li><a href="#records.html"> World records </a></li>
+            <li><a href="#extremos.html"> Deportes extremos </a></li>
+            <li><a href="#famosos.html"> Deportistas más famosos </a></li>
+            <li><a href="#españa.html"> España y el deporte </a></li>
+        </ul>
+    </div>
+    <header class="content header">
+        <h2 class="title"> DEPORTISTAS MÁS FAMOSOS</h2>
+    </header>
+    <section class="content sau">
+        <h2 class="title"> CRISTIANO RONALDO</h2> 
+        <p>Cristiano Ronaldo forma parte de la leyenda del Real Madrid y siempre será recordado como uno de los grandes símbolos de su historia. 
+		Fue presentado en el Santiago Bernabéu el 6 de julio de 2009, acompañado por Eusebio y Alfredo Di Stéfano, y desde entonces no paró de marcar goles: 451 en 438 partidos oficiales con el Real Madrid. 
+		A lo largo de sus nueve temporadas como madridista, Cristiano dejó varios récords impresionantes: máximo goleador de la historia del club, máximo goleador de la historia de la Copa de Europa (marcó 105 tantos en Champions con nuestro equipo);
+		máximo goleador madridista en la Liga (312); más partidos de tres o más goles en la historia de la Liga (34); y más tantos en una temporada con el Real Madrid (61).
+		Batió también el récord de goles en una edición de la Champions (17) y fue pichichi en 6 ediciones de esta competición. 
+		El presidente Florentino Pérez le calificó como “el heredero de Alfredo Di Stéfano”. Y como Don Alfredo, dejó una huella imborrable en la historia del mejor club del mundo.
+        </p>
+        <div class="box-container">
+            <div class="box">
+                <h3> HIGHLIGHTS</h3>
+                <div class="dropdown">
+                    <span class="texto">VER</span>
+                    <div class="dropdown-content">
+                        <a href="https://www.youtube.com/watch?v=eFgSL_CHYwg">  <img src="images/ronaldo.jpg"> </a>
+                    </div>
+                  </div>
+            </div>
+         
+       
+    </section>
+    <section class="content price"> 
+      <article>
+        <h2 class="title">RAFA NADAL</h2>
+        <p> Rafael Nadal, conocido como Rafa Nadal. Destacó desde los 15 años, cuando entró en los circuitos profesionales de competición.
+		Ha conseguido romper muchas barreras de edad, siendo considerado el jugador más joven en alguna disciplina en más de una ocasión y muy reconocido por tal hazaña. 
+        Se dice que es uno de los mejores jugadores de tenis de la historia, especialmente en tierra batida. A sus espaldas tiene 16 torneos de Grand Slam, solo por detrás de Roger Federer. 
+		Ha ganado hasta en diez ediciones el Roland Garros, lo que lo sitúa como el tenista que más veces lo ha conseguido. 
+		Además, ha conseguido grandes reconocimientos por todo el mundo y ha participado en los Juegos Olímpicos. 
+        No solo ha sido reconocido dentro de los circuitos del tenis, sino que también por las instituciones con distinciones como el Premio Príncipe de Asturias de los Deportes y la Medalla de Oro de la Real Orden del Mérito Deportivo.
+        </p>
+		 <div class="box-container">
+            <div class="box">
+                <h3> BEST SHOTS</h3>
+                <div class="dropdown">
+                    <span class="texto">VER</span>
+                    <div class="dropdown-content">
+                        <a href="https://www.youtube.com/watch?v=9X6ulqsNRhI">  <img src="images/nadal.jpg"> </a>
+                    </div>
+                  </div>
+            </div>
+      </article>  
+    </section>
+    <section class="content about">
+        <h2 class="title">KOBE BRYANT </h2>
+        <p> Kobe Bean Bryant (Filadelfia, Pensilvania; 23 de agosto de 1978-Calabasas, California; 26 de enero de 2020)​ fue un baloncestista estadounidense que jugaba en la posición de escolta. 
+		Disputó veinte temporadas en la National Basketball Association (NBA), todas ellas en Los Angeles Lakers.
+        Hijo del también exjugador de baloncesto Joe Bryant,está considerado como uno de los mejores baloncestistas de todos los tiempos. 
+		Ganó cinco campeonatos de la NBA con los Lakers y dos medallas de oro olímpicas con la selección estadounidense, 
+		fue dieciocho veces All-Star, quince veces All-NBA (once de ellas en el primer quinteto), doce veces miembro de los mejores quintetos defensivos,
+		MVP de la Temporada en 2008,​ MVP de las Finales en 2009 y 20108​ y máximo anotador de la liga en 2006 y 2007.
+		En 2020 fue incluido de manera póstuma en el Salón de la Fama del Baloncesto.
+        </p>
+		 <div class="box-container">
+            <div class="box">
+                <h3> BEST MOMENTS </h3>
+                <div class="dropdown">
+                    <span class="texto">VER</span>
+                    <div class="dropdown-content">
+                        <a href="https://www.youtube.com/watch?v=OTTWedyp37o">  <img src="images/kobe.jpg"> </a>
+                    </div>
+                  </div>
+            </div>
+        <div class="dropdown">
+            <span class="texto"></span>
+            <div class="dropdown-content">
+                <a href="https://www.youtube.com/watch?v=08o9crSByXU"> <img src="images/.jpg" width="" height=""> </a> 
+            </div>
+          </div>
+    </section>
+</body>
+</html>
