--- a/oyp.html
+++ b/oyp.html
@@ -1,6 +1,194 @@
+<!DOCTYPE html>
 <html>
-	<head>
-			<title>oyp</title>
-			<link rel="stylesheet" href="estilos.css">
-	</head>
+<head>
+    <title>Olimpiadas y Paralimpiadas</title>
+    <link rel="stylesheet" href="prueba.css">
+</head>
+<body>
+    <center>
+    <ul>
+    <li><a class="active" href="index.html"> Deportes </a></li>
+    <li><a href="#beneficios.html"> Beneficios del deporte </a></li>
+    <li><a href="#oyp.html"> Olimpiadas y Paralimpiadas </a></li>
+    <li><a href="#raros.html"> Deportes raros </a></li>
+    <li><a href="#records.html"> World records </a></li>
+    <li><a href="#extremos.html"> Deportes extremos </a></li>
+    <li><a href="#famosos.html"> Deportistas más famosos </a></li>
+    <li><a href="#españa.html"> España y el deporte </a></li>
+    </ul>
+
+    <section class="inicio" id="inicio">
+        <div class="content">
+            <h1> Olimpiadas</h1>
+            <p>
+              Hasta 1992 los Juegos Olímpicos de Verano e Invierno siempre se habían
+              celebrado en el mismo año, fecha en que el Comité Olímpico Internacional (COI),
+              el órgano que rige los Juegos Olímpicos, decidió celebrarlos en ciclos
+              separados de cuatro años, de forma alternativa en años pares. </p>
+        </div>
+    </section>
+
+<section class="intro" id="intro">
+  <div class="box-container">
+
+            <div class="box">
+                <i class="fab fa-angular"></i>
+                <h3> <img src="imgs/azul.png" width="100" height="100"> </h3>
+                <p> Los Juegos Olímpicos son considerados la competición deportiva
+                  más importante del mundo y cuentan con la participación de más de 200 países.
+                </p>
+            </div>
+
+            <div class="box">
+                <i class="fab fa-android"></i>
+                <h3> <img src="imgs/negro.png" width="100" height="100"> </h3>
+                <p> Los Juegos Olímpicos de Invierno han tenido su sede en tres continentes,
+                  pero nunca en un país del hemisferio Sur.</p>
+            </div>
+
+            <div class="box">
+                <i class="fab fa-android"></i>
+                <h3> <img src="imgs/rojo.png" width="100" height="100"> </h3>
+                <p>El lema olímpico acuñado en 1921 por Pierre de Coubertin, fundador de los Juegos Olímpicos modernos,
+                  reza Citius, Altius, Fortius», que podemos traducir como «más rápido, más alto, más fuerte».</p>
+            </div>
+
+            <div class="box">
+                <i class="fab fa-apple"></i>
+                <h3> <img src="imgs/amarillo.png" width="100" height="100"> </h3>
+                <p>Los cinco anillos del emblema olímpico representan los cinco
+                continentes que participan en los Juegos e hicieron su debut en los Juegos de 1920 en Amberes.
+                </p>
+            </div>
+
+            <div class="box">
+                <i class="fab fa-android"></i>
+                <h3> <img src="imgs/verde.png" width="100" height="100"> </h3>
+                <p> Los Juegos se celebran cada dos años, alternándose los Juegos Olímpicos de Verano y los de Invierno.</p>
+            </div>
+
+    </div>
+</section>
+
+<section class="social" id="social">
+
+        <h1 class="heading"> Repercusión social</h1>
+        <h3 class="title">La influencia internacional de los Juegos Olímpicos como símbolo de la
+          celebración de la paz y la convivencia entre las naciones se ha afianzado
+          a lo largo de las décadas, constituyendo un espacio del que se excluyen a las
+          naciones no democráticas o irrespetuosas de los derechos humanos fundamentales.
+          Así, el veto del Comité Olímpico puede ser un gesto político de importancia en
+          tanto denuncia internacional de los manejos internos del gobierno de una nación.
+          Hasta hoy, todas las naciones rechazadas por el COI, han sido por cuestiones
+          políticas o de discriminación racial.</h3>
+
+        <div class="box-container">
+            <div class="box">
+                <i class="fab fa-android"></i>
+                <h3>Amberes 1920</h3>
+                <h3> <img src="imgs/1920.png" width="180" height="125"> </h3>
+                <p>URSS, Austria, Alemania, Polonia, Hungría, Bulgaria y Turquía; por estar en el bando perdedor de la Primera Guerra Mundial.</p>
+            </div>
+
+            <div class="box">
+                <i class="fab fa-apple"></i>
+                <h3>Londres 1948</h3>
+                <h3> <img src="imgs/1948.png" width="180" height="125"> </h3>
+                <p>Japón y Alemania; por estar en el bando perdedor de la Segunda Guerra Mundial.</p>
+            </div>
+
+            <div class="box">
+                <i class="fab fa-angular"></i>
+                <h3>Tokio 1964</h3>
+                <h3> <img src="imgs/1964.png" width="180" height="125"> </h3>
+                <p>Sudáfrica; por el Apartheid, no pudo volver hasta 1992.</p>
+            </div>
+
+            <div class="box">
+                <i class="fab fa-android"></i>
+                <h3>Pekín 2022</h3>
+                <h3> <img src="imgs/2022.png" width="180" height="125"> </h3>
+                <p>Rusia y Bielorrusia; por la invasión de Ucrania.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="historia" id="historia">
+
+        <h1 class="heading">Historia</h1>
+        <div class="box-container">
+
+            <div class="box">
+                <img src="imgs/dioses.jpg" alt="">
+                <p>La tradición de celebración de las Olimpíadas se remonta
+                  a la antigüedad griega (VIII a. C.), cuando eran llevadas a
+                  cabo en homenaje a los dioses del panteón olímpico (de allí su nombre).</p>
+            </div>
+
+            <div class="box">
+                <img src="imgs/grecia.jpg" alt="">
+                <p>Estas fiestas deportivas reunían a todos los grandes guerreros
+                  y héroes de las naciones helénicas en una serie de competiciones
+                  para elegir a los mejores y premiarlos </p>
+            </div>
+
+            <div class="box">
+                <img src="imgs/paz.jpg" alt="">
+                <p>Durante este período de celebración se decretaba una paz
+                  olímpica (ékécheira) en la que todas las naciones deponían sus armas.</p>
+            </div>
+
+            <div class="box">
+                <img src="imgs/imperio.png" alt="">
+                <p>Los juegos olímpicos de la antigüedad se celebraron hasta el
+                  año 393 d. C., casi doce siglos antes de que fueran retomadas en
+                  su variante moderna, debido a la adopción del cristianismo por el
+                  Sacro Imperio Romano, cuando se prohibió la realización de todo tipo de fiestas paganas.</p>
+            </div>
+
+            <div class="box">
+                <img src="imgs/1896.jpg" alt="">
+                <p>La primera edición de los Juegos Olímpicos modernos se celebró en 1896 en
+                  Atenas, Grecia, y fue el gesto fundacional de una tradición que continúa hasta hoy.
+                  Cada cuatro años se han celebrado en una ciudad de un país distinto, excepto las
+                  ediciones de 1916 y de 1940 y 1944, años en los que el mundo se hallaba en la Primera y
+                  Segunda Guerra Mundial respectivamente.</p>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="prox" id="prox">
+      <h1 class="heading">Próximos</h1>
+
+      <table style="border: hidden">
+      <tr>
+      <td> <img src="imgs/lugar.png" width="450" height="300"> <td> <img src="imgs/pais.png" width="450" height="300">
+      <tr> <td> <img src="imgs/deportista.png" width="450" height="300"> <td> <img src="imgs/deportes.png" width="450" height="300">
+      <tr> <td colspan="2"> <center> <img src="imgs/breakdance.png" width="450" height="300">
+      </table>
+
+    </section>
+
+    <section class="para" id="para">
+        <div class="content">
+            <h1> Paralimpiadas</h1>
+            <p>
+            Los Juegos Paralímpicos constituyen el principal evento deportivo en el
+            mundo de los atletas discapacitados. Existen seis categorías de atletas,
+            que van desde atletas con lesiones de médula espinal hasta los visualmente
+            discapacitados. La primera competición entre atletas discapacitados fue de
+            tiro con arco y tuvo lugar el mismo día que la ceremonia de inauguración de
+            la decimocuarta edición de los Juegos Olímpicos en 1948. <br> <r> <br> Los Juegos Paralímpicos
+            fueron creados por Ludwig Guttmann, un neurocirujano alemán que escapó a la
+            persecución judía y encontró refugio en el Reino Unido. En el Stoke Mandeville
+            Hospital en Buckinghamshire, trató a un número creciente de militares que
+            volvían del frente, de los que muchos sufrían una parálisis y se enfrentaban
+            a un futuro incierto. Guttmann era consciente de los efectos positivos que la
+            actividad física tenía en la psique y, por lo tanto, su pauta de tratamiento
+            incluía deportes individuales y de equipo.</p>
+        </div>
+    </section>
+
+</body>
 </html>
