--- a/beneficios.html
+++ b/beneficios.html
@@ -3,7 +3,7 @@
 <head>
 
 </head>
-<link rel="stylesheet" href="bene.css">
+<link rel="stylesheet" href="estilos.css">
 <body>
 
     <div class="head">
