--- a/famosos.html
+++ b/famosos.html
@@ -3,7 +3,7 @@
 <head>
 
 </head>
-<link rel="stylesheet" href="famosos.css">
+<link rel="stylesheet" href="estilos.css">
 <body>
 
     <div class="head">
