--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>+Deportes</title>
-    <link rel="stylesheet" href="prueba.css">
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <center>
