--- a/oyp.html
+++ b/oyp.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Olimpiadas y Paralimpiadas</title>
-    <link rel="stylesheet" href="prueba.css">
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <center>
